<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileRegisterFragment"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/registerProfileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_profile_register_text"
        android:textColor="@color/text"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/registerProfileUsername"/>

    <TextView
        android:id="@+id/registerProfileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="username!"
        android:textColor="@color/text"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/profilePictureRegisterLayout"
        android:layout_marginBottom="30dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profilePictureRegisterLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_text_field"
        app:layout_constraintStart_toStartOf="@id/registerButton"
        app:layout_constraintEnd_toEndOf="@id/registerButton"
        app:layout_constraintBottom_toTopOf="@id/ageRegisterLayout"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/iconProfilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profile_picture"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/profilePictureRegisterTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_profile_register_profile_picture"
            android:textColor="@color/text_box_text"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/iconProfilePicture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:id="@+id/profilePicturePreview"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="upload Image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ageRegisterLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_text_field"
        app:layout_constraintStart_toStartOf="@id/registerButton"
        app:layout_constraintEnd_toEndOf="@id/registerButton"
        app:layout_constraintBottom_toTopOf="@id/genderRegisterLayout"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/iconAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_age"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="17dp"/>

        <EditText
            android:id="@+id/ageRegisterTextField"
            android:hint="@string/fragment_profile_register_age"
            android:inputType="number"
            style="@style/EditTextField"
            app:layout_constraintStart_toEndOf="@id/iconAge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/genderRegisterLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_text_field"
        app:layout_constraintStart_toStartOf="@id/registerButton"
        app:layout_constraintEnd_toEndOf="@id/registerButton"
        app:layout_constraintBottom_toTopOf="@id/professionRegisterLayout"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/iconGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gender"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"/>

        <EditText
            android:id="@+id/genderRegisterTextField"
            android:hint="@string/fragment_profile_register_gender"
            android:inputType="text"
            style="@style/EditTextField"
            app:layout_constraintStart_toEndOf="@id/iconGender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/professionRegisterLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_text_field"
        app:layout_constraintStart_toStartOf="@id/registerButton"
        app:layout_constraintEnd_toEndOf="@id/registerButton"
        app:layout_constraintBottom_toTopOf="@id/registerButton"
        android:layout_marginBottom="50dp">

        <ImageView
            android:id="@+id/iconProfession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profession"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"/>

        <EditText
            android:id="@+id/professionRegisterTextField"
            android:hint="@string/fragment_profile_register_profession"
            android:inputType="text"
            style="@style/EditTextField"
            app:layout_constraintStart_toEndOf="@id/iconProfession"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/profileRegisterErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_empty_text_fields"
        android:textColor="@color/text_error"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/professionRegisterLayout"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/fragment_profile_register_register"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:elevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="150dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>